[package]
name = "sqleibniz-proc"
version = "0.0.1"
edition = "2024"
description = "Internal proc macros for sqleibniz"
repository = "https://github.com/xnacly/sqleibniz"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
