[package]
name = "sqleibniz"
version = "0.0.1-pre"
edition = "2024"
description = "Static analysis and LSP for SQL in Rust"
repository = "https://github.com/xnacly/sqleibniz"
license = "MIT"
readme = "../README.md"

categories = ["development-tools"]
keywords = ["sql", "lsp", "static-analysis", "parser", "language-server"]

[features]
trace = ["sqleibniz-proc"]

[dependencies]
sqleibniz-proc = { version = "0.0.1", optional = true }

clap = { version = "4.5", features = ["derive"] }
lsp-server = "0.7.8"
lsp-types = "0.97.0"
mlua = {version = "0.10.2", features = ["lua54", "vendored"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
toml = "0.8.19"

[dev-dependencies]
pretty_assertions = "1.4.1"

[package.metadata.docs.rs]
no-default-features = true
